# Teco-Plugin

./: CMakeLists.txt
pluginAdd/: CMakeLists.txt  plugin_add.cc  plugin_add.h  plugin_add.scpp
tests/: test_plugin_add.py
